[FIX] Icon alignment
 - Better alignment of icons in the material list;

--- a/indico/htdocs/css/Default.css
+++ b/indico/htdocs/css/Default.css
@@ -3481,7 +3481,7 @@ ul.materialList li
 
 ul.materialList li span
 {
-    padding-left: 10px;
+    padding-left: 5px;
     font-size: 14px;
 }
 
